--- a/src/design-tokens/css-variables.scss
+++ b/src/design-tokens/css-variables.scss
@@ -1,5 +1,5 @@
 :root {
   --color-primary: #000000;
-  --color-secondary: #dd0000;
-  --color-additional: #ffce00;
+  --color-secondary: #6ab155;
+  --color-additional: #bdffa4;
 }
