--- a/src/screens/main/Intro/Intro.scss
+++ b/src/screens/main/Intro/Intro.scss
@@ -27,4 +27,13 @@ header {
   margin-right: auto;
   margin-left: auto;
   padding: $low-pad;
+  .form {
+    display: flex;
+    justify-content: flex-start;
+    padding: $low-pad;
+    input{
+      max-width: 500px;
+    }
+  }
+
 }
